--- a/views/workspace-page.ejs
+++ b/views/workspace-page.ejs
@@ -133,7 +133,7 @@
                 </div>
             </div>
         </section>
-        <section class="note-wrapper" style="display: none;">
+        <section class="note-wrapper">
             <div class="content-wrapper">
                 <div class="wrapper-note-btn">
                     <button class="buttons-icon-efect note-menu-btn" id="btn-return-page"><i class="fa-solid fa-angles-left"></i></button>
@@ -327,7 +327,7 @@
                 </div>
             </div>
         </section>
-        <section id="important-wrapper" class="new-section">
+        <section id="important-wrapper" class="new-section" style="display: none;">
             <div class="important-header">
                 <div class="wrapper-important-title">
                     <div class="wrapper-header-icon"><i class="fa-solid fa-triangle-exclamation"></i></div>
