wip: Registration page front-end, in resposive layout.

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,26 +10,26 @@
             <div class="wrapper-rigister-form">
                 <div class="register-with-us">
 
-                    <div class="wrapper-nickname">
+                    <div class="wrapper-register-input">
 
                         <input type="text" name="" id="input-nickname" placeholder="Nickname">
 
                     </div>
 
-                    <div class="wrapper-fullname">
+                    <div class="wrapper-register-input wrapper-register-fullname">
 
                         <input type="text" id="input-first-name" placeholder="First Name">
                         <input type="text" id="input-last-name" placeholder="Last Name">
 
                     </div>
 
-                    <div class="wrapper-email">
+                    <div class="wrapper-register-input">
 
                         <input type="text" name="" id="input-email" placeholder="Email">
 
                     </div>
 
-                    <div class="wrapper-password">
+                    <div class="wrapper-register-input wrapper-register-password">
 
                         <input type="password" name="" id="input-password" placeholder="Enter your Password">
                         <input type="password" name="" id="input-re-password" placeholder="Confirm Password">
@@ -43,9 +43,9 @@
 
                     </div>
 
-                    <div class="wrapper-sign-up">
+                    <div class="wrapper-sign-up-form">
 
-                        <button type="button" id="btn-sign-up">Sign up</button>
+                        <button class="buttuns-purple-style" type="button" id="btn-sign-up">Sign up</button>
 
                     </div>
 
@@ -55,12 +55,8 @@
 
                 <div class="register-with-api">
 
-                    <div class="wrapper-register-google">
-
-                        <button id="btn-register-with-google" class="btn-login-page buttuns-purple-style" type="button"><img src="icons/google-icon.png" alt="google icon"> <span>Sign up with Google</span></button>
-                        <button id="btn-register-with-apple" class="btn-login-page buttuns-purple-style" type="button"><img src="icons/apple-icon.png" alt="apple icon"> <span>Sign up with Apple</span></button>
-
-                    </div>
+                    <button id="btn-register-with-google" class="buttuns-purple-style" type="button"><img src="icons/google-icon.png" alt="google icon"> <span>Sign up with Google</span></button>
+                    <button id="btn-register-with-apple" class="buttuns-purple-style" type="button"><img src="icons/apple-icon.png" alt="apple icon"> <span>Sign up with Apple</span></button>
 
                 </div>
                 <div class="wrapper-register-in">
