--- a/public/scss/loginStyles.scss
+++ b/public/scss/loginStyles.scss
@@ -335,11 +335,202 @@ body{
 
 .register-wrapper{
 
-    background-color: bisque;
-    padding: .3rem;
+    padding: .5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-height: 90%;
+
+}
+.wrapper-rigister-header{
+
+    //background-color: blueviolet;
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.3rem;
+
+    h2{
+
+        font-size: 2rem;
+
+    }
+
+}
+.wrapper-rigister-form{
+
+    //background-color: aquamarine;
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+
+}
+.register-with-us{
+
+    //background-color: aqua;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+.wrapper-register-input{
+
+    //background-color: brown;
+    width: 100%;
+    margin-bottom: .6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    &>input{
+
+        width: 100%;
+        height: 2.5rem;
+        padding-left: .3rem;
+        font-size: 1.2rem;
+        outline: transparent;
+        border-radius: .3rem;
+        border: 1px solid #00000077;
+
+        &::placeholder{
+
+            font-size: 1.2rem;
+            justify-self: center;
+            color: rgba(0, 0, 0, 0.788);
+
+        }
+
+    }
+
+}
+.wrapper-register-fullname > input:first-child{
+
+    margin-right: .5rem;
+
+}
+.wrapper-register-password{
+
+    flex-direction: column;
+    margin-bottom: .6rem;
+
+    &>input:first-child{
+
+        margin-bottom: .6rem;
+
+    }
+
+}
+.wrapper-agree{
+
+    //background-color: bisque;
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: .6rem;
+
+    &>input{
+
+        margin-right: .6rem;
+        transform: scale(1.6);
+
+    }
+    &>p{
+        
+        font-weight: bolder;
+
+        &>a{
+
+            color: #000000b6;
+            text-decoration: none;
+
+        }
+    }
+
+}
+.wrapper-sign-up-form{
+
+    //background-color: rgb(20, 99, 9);
+    width: 100%;
+    padding: .6rem;
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &>button{
+
+        width: 80%;
+        height: 2.5rem;
+        font-size: 1.5rem;
+        font-weight: bolder;
+
+    }
+
+}
+.wrapper-rigister-form > .or-wrapper{
+    
+    align-self: center;
+
+}
+.register-with-api{
+
+    //background-color: cadetblue;
+    margin-top: 1rem;
+    padding: .2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    &>button{
+
+        width: 80%;
+        height: 2.5rem;
+        font-weight: bolder;
+
+        &:first-child{
+
+            margin-bottom: .6rem;
+
+        }
+
+        &>img{
+
+            width: 1.7rem;
+            height: 1.7rem;
+            margin-right: .4rem;
+
+        }
+
+    }
+
+}
+.wrapper-register-in{
+
+    //background-color: chartreuse;
+    width: 100%;
+    padding: .6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &>span{
+
+        font-weight: bolder;
+
+        &>a{
+
+            text-decoration: none;
+            color: #0000009a;
+
+        }
+
+    }
 
 }
 
@@ -414,7 +605,7 @@ body{
 
 @media (min-width: 768px){
 
-    .login-wrapper{
+    .login-wrapper, .register-wrapper{
 
         &>div{
 
@@ -427,7 +618,7 @@ body{
 }
 @media (min-width: 900px){
 
-    .login-wrapper{
+    .login-wrapper, .register-wrapper{
 
         &>div{
 
@@ -440,13 +631,23 @@ body{
 }
 @media (min-width: 1024px){
 
-    .login-wrapper{
+    .login-wrapper, .register-wrapper{
 
         &>div{
 
             width: 50%;
 
         }
+
+    }
+    .wrapper-rigister-header{
+
+        padding: .5rem;
+
+    }
+    .wrapper-rigister-form{
+        
+        padding: .5rem;
 
     }
     .photo-wrapper{
@@ -622,7 +823,7 @@ body{
 }
 @media (min-width: 1800px){
 
-    .login-wrapper{
+    .login-wrapper, .register-wrapper{
 
         &>div{
 
