--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include("inc/sing-in-up-head") -%>
 
-        <div class="login-wrapper">
+        <div class="login-wrapper" id="login">
 
             <div class="text-wrapper">
 
