--- a/public/scss/loginStyles.scss
+++ b/public/scss/loginStyles.scss
@@ -658,14 +658,14 @@ body{
         display: flex;
         flex-direction: column;
         align-items: center;
-        background: url("./../img/Login.jpg") no-repeat center center;
         background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         border-radius: 2rem;
         padding: .5rem;
         margin-top: auto;
         margin-bottom: auto;
         margin-left: 10px;
-        transform: skewX(-1deg);
         border: 1px solid #000000b2;
 
     }
